--- a/react-animations/src/App.css
+++ b/react-animations/src/App.css
@@ -18,7 +18,6 @@ a {
 }
 
 .App-main, .App-header {
-  margin-top: 5em;
   background-color: #282c34;
   display: flex;
   flex-direction: column;
@@ -26,6 +25,7 @@ a {
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  margin-bottom: 8em;
 }
 
 .App-link {
