--- a/react-animations/src/App.css
+++ b/react-animations/src/App.css
@@ -17,7 +17,7 @@ a {
   color: #61dafb;
 }
 
-.App-main, .App-header {
+.App-header {
   background-color: #282c34;
   display: flex;
   flex-direction: column;
@@ -25,6 +25,16 @@ a {
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  margin-bottom: 8em;
+}
+
+.App-main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: black;
   margin-bottom: 8em;
 }
 
