--- a/react-animations/src/components/Fill.css
+++ b/react-animations/src/components/Fill.css
@@ -31,7 +31,8 @@
 
 .container {
   display: flex;
+  flex-direction: row;
   align-items: center;
   height: 100%;
-  justify-content: center;
+  justify-content: space-between;
 }
